Add specificity to Submission section

--- a/Kaggle_Submission_Template.ipynb
+++ b/Kaggle_Submission_Template.ipynb
@@ -214,6 +214,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission File Creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "u8bRFZpwhpEE"
    },
