--- a/Kaggle_Submission_Template.ipynb
+++ b/Kaggle_Submission_Template.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Optional) Data Imputation"
+    "### Missing Value Handling"
    ]
   },
   {
