--- a/First_Kaggle_Submission_Example.ipynb
+++ b/First_Kaggle_Submission_Example.ipynb
@@ -922,7 +922,7 @@
     "\n",
     "# Save predictions to submission.csv\n",
     "submission = pd.read_csv(\"sample_submission.csv\")\n",
-    "submission[target] = preds\n",
+    "submission['loan_status'] = preds\n",
     "submission.to_csv('submission.csv', index=False)\n",
     "print(\"Predictions saved to submission.csv.\")"
    ]
